<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".telaConfiguracoes">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/linguagem"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="31dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdbPt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pt"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="448dp" />

        <RadioButton
            android:id="@+id/rdbIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="448dp" />

        <RadioButton
            android:id="@+id/rdbEsp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/es"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="448dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fitsSystemWindows="false"
        android:text="@string/salvar" />

</LinearLayout>